Fix logo alignment

--- a/style.scss
+++ b/style.scss
@@ -112,7 +112,7 @@
   color: var(--color-white);
   font-family: 'Merriweather', serif;
   font-weight: 900;
-  margin-left: var(--item-padding);
+  margin-left: 0;
   position: relative;
 
   @media (max-width: 600px) {
